Revision history for Perl distribution PathTools.

 - Removed some function prototypes and other Perl::Critic violations.

 - canonpath() and catdir() and catfile() on Win32 now make an
   explicit (and unnecessary) copy of their arguments right away,
   because apparently if we don't, we sabotage all of Win32dom. [RT
   #33675]

 - The Makefile.PL now has 'use 5.005;' to explicitly show what
   minimum version of perl we support. [Spotted by Alexandr Ciornii]

3.2701 - Mon Feb 11 21:43:51 2008

 - Fixed an edge case for Win32 catdir('C:', 'foo') and catfile('C:',
   'foo.txt') (which the caller's not really supposed to do, that's
   what catpath() is for) that changed between versions.  Now we're
   back to the old behavior, which was to return C:\foo and C:\foo.txt .
   [Audrey Tang]

3.27 - Wed Jan 16 20:20:49 2008

 - If strlcpy() and strlcat() aren't available on the user's system,
   we now use ppport.h to provide them, so our C code works. [Steve
   Peters]

 - Upgraded to a newer version of ppport.h [Steve Peters]

3.26 - Sun Jan 13 21:59:20 2008

 - case_tolerant() on Cygwin will now avoid a painful death when
   Cygwin::mount_flags() isn't defined, as is the case for perl <
   5.10.  It will now just return 1, which is what it always did
   before it got so smart. [Spotted by Emanuele Zeppieri]

 - abs_path() on Unix(ish) platforms has been upgraded to a much later
   version of the underlying C code from BSD. [Michael Schwern]

3.2501 - Mon Dec 24 20:33:02 2007

 - Reimplemented abs_path() on VMS to use
   VMS::Filespec::vms_realpath() when it's available. [John E. Malmberg]

 - tmpdir() on Cygwin now also looks in $ENV{TMP} and $ENV{TEMP}.

 - case_tolerant() on Cygwin and Win32 now take an optional path
   argument, defaulting to the C drive, to check for case tolerance,
   because this fact can vary on different volumes.

 - File::Spec on Unix now uses Cwd::getcwd() rather than Cwd::cwd() to